--- a/Assignment1/Assignment1Client/Assignment1Client.csproj
+++ b/Assignment1/Assignment1Client/Assignment1Client.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connected Services\Assignment1Reference\Reference.cs">
+    <Compile Include="Connected Services\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -55,31 +55,34 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Connected Services\Assignment1Reference\Assignment1Service.xsd">
+    <None Include="Connected Services\ServiceReference1\Assignment1Service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\Assignment1Reference\Assignment1Service1.xsd">
+    <None Include="Connected Services\ServiceReference1\Assignment1Service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\Assignment1Reference\Service1.wsdl" />
+    <None Include="Connected Services\ServiceReference1\Assignment1Service2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReference1\Service1.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\Assignment1Reference\" />
+    <WCFMetadataStorage Include="Connected Services\ServiceReference1\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\Assignment1Reference\Assignment1Service.disco" />
+    <None Include="Connected Services\ServiceReference1\Assignment1Service.disco" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\Assignment1Reference\configuration91.svcinfo" />
+    <None Include="Connected Services\ServiceReference1\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\Assignment1Reference\configuration.svcinfo" />
+    <None Include="Connected Services\ServiceReference1\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\Assignment1Reference\Reference.svcmap">
+    <None Include="Connected Services\ServiceReference1\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
